# code-challenge-2024-gabrielgusn

./: Cargo.toml  output.txt  run.sh
.github/workflows/: classroom.yml
mempool/: 0.json
src/: lib.rs  main.rs
src/block/: block.rs  block_header.rs
src/mempool/: mempool.rs
src/script/: mod.rs
src/transactions/: tx.rs
src/utils/: mod.rs  sha256.rs  tree.rs
