[package]
name = "mining-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
chrono = "0.4.37"
hex-literal = "0.4.1"
serde_json = "1.0.115"
sha2 = "0.10.8"
ripemd = "0.1.3"
merkletree = "0.23.0"
sha256 = "1.5.0"
hex = "0.4.3"
secp256k1 = "0.29.0"
signature = "2.2.0"
libsecp256k1 = "0.7.1"
